--- a/pages/chronic-center.html
+++ b/pages/chronic-center.html
@@ -613,10 +613,12 @@
             <div class="bg-white border border-gray-200 rounded-lg overflow-hidden">
               <div class="p-4">
                 <div class="flex items-center mb-3">
-                  <img src="https://via.placeholder.com/50" class="w-12 h-12 rounded-full object-cover mr-3" alt="患者照片">
+                  <div class="w-12 h-12 rounded-full bg-gray-200 flex items-center justify-center mr-3 overflow-hidden">
+                    <i class="fas fa-user text-gray-500 text-xl"></i>
+                  </div>
                   <div>
-                    <h4 class="font-semibold text-gray-800">陈女士（62岁）</h4>
-                    <p class="text-sm text-gray-500">宝鸡市民，2型糖尿病患者</p>
+                    <div class="font-semibold text-gray-700">王女士 (54岁)</div>
+                    <div class="text-xs text-gray-500">2型糖尿病 | 高血压</div>
                   </div>
                 </div>
                 
