--- a/pages/offline-clinic.html
+++ b/pages/offline-clinic.html
@@ -454,12 +454,21 @@
         <div class="bg-white rounded-xl shadow-sm p-5 mb-6">
           <h3 class="text-lg font-bold text-gray-800 mb-4">智能分诊系统</h3>
           
-          <div class="relative mb-5">
-            <img src="https://via.placeholder.com/400x220/f0f9ff/1e40af?text=智能分诊系统" class="w-full h-40 object-cover rounded-lg" alt="智能分诊系统">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent rounded-lg"></div>
-            <div class="absolute bottom-3 left-3 text-white">
-              <div class="font-semibold mb-1">智能分流，精准就诊</div>
-              <div class="text-xs">减少患者等待时间，提高医疗资源利用效率</div>
+          <div class="relative mb-4">
+            <div class="w-full h-40 bg-blue-100 rounded-lg flex flex-col items-center justify-center">
+              <i class="fas fa-random text-blue-500 text-4xl mb-2"></i>
+              <div class="text-blue-700 font-semibold">智能分诊系统</div>
+              <div class="text-sm text-blue-600 mt-1">优化就诊流程 提高诊疗效率</div>
+              <div class="flex mt-2 space-x-4">
+                <div class="flex items-center">
+                  <i class="fas fa-user-md text-blue-500 mr-1"></i>
+                  <span class="text-xs text-blue-700">专家分配</span>
+                </div>
+                <div class="flex items-center">
+                  <i class="fas fa-clock text-blue-500 mr-1"></i>
+                  <span class="text-xs text-blue-700">优化等待</span>
+                </div>
+              </div>
             </div>
           </div>
           
