--- a/pages/external-network.html
+++ b/pages/external-network.html
@@ -639,7 +639,9 @@
           <div class="space-y-5">
             <div class="bg-gray-50 rounded-lg p-5">
               <div class="flex items-center mb-2">
-                <img src="https://via.placeholder.com/40" alt="宝鸡市中心医院" class="w-10 h-10 rounded-full mr-3">
+                <div class="w-10 h-10 rounded-full bg-blue-100 flex items-center justify-center mr-3">
+                  <i class="fas fa-hospital text-blue-500"></i>
+                </div>
                 <div>
                   <div class="font-medium text-gray-800">宝鸡市中心医院</div>
                   <div class="text-xs text-gray-500">三级甲等医院 | 综合医疗</div>
@@ -656,7 +658,9 @@
             
             <div class="bg-gray-50 rounded-lg p-5">
               <div class="flex items-center mb-2">
-                <img src="https://via.placeholder.com/40" alt="宝鸡市凤翔区人民医院" class="w-10 h-10 rounded-full mr-3">
+                <div class="w-10 h-10 rounded-full bg-green-100 flex items-center justify-center mr-3">
+                  <i class="fas fa-hospital text-green-500"></i>
+                </div>
                 <div>
                   <div class="font-medium text-gray-800">凤翔区人民医院</div>
                   <div class="text-xs text-gray-500">二级甲等医院 | 区域医疗</div>
