--- a/pages/passive-consultation.html
+++ b/pages/passive-consultation.html
@@ -221,7 +221,7 @@
                 <ul class="text-gray-600 space-y-2 mb-4">
                   <li class="flex items-start">
                     <i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i>
-                    <span>宝鸡高新人民医院（二级甲等）</span>
+                    <span>宝鸡高新医院（三级甲等）</span>
                   </li>
                   <li class="flex items-start">
                     <i class="fas fa-check-circle text-green-500 mt-1 mr-2"></i>
@@ -342,7 +342,9 @@
                   <h3 class="text-xl font-bold text-gray-800 mb-4">典型案例</h3>
                   <div class="bg-white rounded-lg shadow-sm p-4">
                     <div class="flex items-center mb-3">
-                      <img src="https://via.placeholder.com/50" class="w-12 h-12 rounded-full mr-3" alt="患者照片">
+                      <div class="w-12 h-12 rounded-full bg-gray-200 flex items-center justify-center mr-3 overflow-hidden">
+                        <i class="fas fa-user text-gray-500 text-xl"></i>
+                      </div>
                       <div>
                         <h4 class="font-semibold text-gray-800">张先生（58岁，宝鸡市民）</h4>
                         <p class="text-sm text-gray-500">高血压患者</p>
