--- a/pages/standard-clinic.html
+++ b/pages/standard-clinic.html
@@ -676,12 +676,21 @@
         <div class="bg-white rounded-xl shadow-sm p-5">
           <h3 class="text-lg font-bold text-gray-800 mb-4">标准门诊网点</h3>
           
-          <div class="relative mb-4">
-            <img src="https://via.placeholder.com/400x200/f0f9ff/1e40af?text=门诊网点分布图" class="w-full h-40 object-cover rounded-lg" alt="门诊网点分布">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent rounded-lg"></div>
-            <div class="absolute bottom-3 left-3 text-white">
-              <div class="font-semibold mb-1">已覆盖全国38个城市</div>
-              <div class="text-xs">182家标准化门诊网点</div>
+          <div class="relative">
+            <div class="w-full h-40 bg-blue-100 rounded-lg flex flex-col items-center justify-center">
+              <i class="fas fa-map-marked-alt text-blue-500 text-4xl mb-2"></i>
+              <div class="text-blue-700 font-semibold">门诊网点分布图</div>
+              <div class="text-sm text-blue-600 mt-1">覆盖宝鸡市主要区域</div>
+              <div class="flex mt-2 space-x-4">
+                <div class="flex items-center">
+                  <span class="w-3 h-3 bg-blue-500 rounded-full mr-1"></span>
+                  <span class="text-xs text-blue-700">主城区</span>
+                </div>
+                <div class="flex items-center">
+                  <span class="w-3 h-3 bg-green-500 rounded-full mr-1"></span>
+                  <span class="text-xs text-blue-700">周边区县</span>
+                </div>
+              </div>
             </div>
           </div>
           
